@@ -22,6 +22,7 @@ Bug fixes:
 	* Fix crash selecting "cell" from function list in function dialog
 	* Properly draw the border line of the symbol in the legend (BUG 491310)
 	* Show Ticks on inverted axes (BUG 491502 & 492475)
+	* Fixed add/subtract value functionality in Matrix (BUG 493523)
 
 Internal:
 	* use name LabPlot/labplot consistenly (renamed LabPlot2/labplot2)
